add header styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,14 +23,14 @@
         </nav>
         <div class="header-contacts">
             <a href="tel:4055550128" class="header-contacts__link link-call">
-                  <img src="../assets/icons/communications/iPhone.svg" alt="phone">
+                  <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
                   <span class="link-call__title">Call us</span>
                   <span class="link-call__tel">(405) 555-0128</span>
             </a>
             <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
-                  <img src="../assets/icons/communications/Chat.svg" alt="phone">
+                  <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
                   <span class="link-mail__title">Talk to us</span>
-                  <span class="link-mail__tel">hello@createx.com</span>
+                  <span class="link-mail__adr">hello@createx.com</span>
             </a>
         </div>
       </div>
