add hero section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,5 +35,47 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="slider__btn" id="slide-to-left"><svg><path fill-rule="evenodd" clip-rule="evenodd" d="M9.207 17.207a1 1 0 01-1.414 0l-4.5-4.5a1 1 0 010-1.414l4.5-4.5a1 1 0 011.414 1.414L6.414 11H20a1 1 0 110 2H6.414l2.793 2.793a1 1 0 010 1.414z"></path></svg></div>
+        <div class="slider__btn" id="slide-to-right"><svg><path fill-rule="evenodd" clip-rule="evenodd" d="M14.793 6.793a1 1 0 011.414 0l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414L17.586 13H4a1 1 0 110-2h13.586l-2.793-2.793a1 1 0 010-1.414z"></path></svg></div>
+        <div class="hero__slider">
+          <div class="slider__slide" id="hero-slide-1">
+            <div class="container">
+              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
+              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+            <div class="slider__slide" id="hero-slide-2">
+            <div class="container">
+              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
+              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+            <div class="slider__slide" id="hero-slide-3">
+            <div class="container">
+              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
+              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+            <div class="slider__slide" id="hero-slide-4">
+            <div class="container">
+              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
+              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+          </div>
+        </div>
+        <div class="hero__slider-count">
+          <div class="slider-count__1 active">01</div>
+          <div class="slider-count__2">02</div>
+          <div class="slider-count__3">03</div>
+          <div class="slider-count__4">04</div>
+      </section>
+    </main>
   </body>
 </html>
