add hero section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,81 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-    <link rel="stylesheet" href="../styles/main.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__container container">
-        <a href="#" class="logo"
-          ><img src="../assets/icons/logo.svg" alt="logo"
-        /></a>
-        <nav class="header__nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="./AboutPage.html">About Us</a></li>
-            <li class="nav__item"><a class="nav__link"  href="./ServicesPage.html">Services</a></li>
-            <li class="nav__item"><a class="nav__link"  href="./WorkPage.html">Work</a></li>
-            <li class="nav__item"><a class="nav__link"  href="./NewsPage.html">News</a></li>
-            <li class="nav__item"><a class="nav__link"  href="./ContactsPage.html">Contacts</a></li>
-          </ul>
-        </nav>
-        <div class="header-contacts">
-            <a href="tel:4055550128" class="header-contacts__link link-call">
-                  <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
-                  <span class="link-call__title">Call us</span>
-                  <span class="link-call__tel">(405) 555-0128</span>
-            </a>
-            <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
-                  <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
-                  <span class="link-mail__title">Talk to us</span>
-                  <span class="link-mail__adr">hello@createx.com</span>
-            </a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Homepage</title>
+  <link rel="stylesheet" href="../styles/main.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__container container">
+      <a href="#" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="./AboutPage.html">About Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="./ServicesPage.html">Services</a></li>
+          <li class="nav__item"><a class="nav__link" href="./WorkPage.html">Work</a></li>
+          <li class="nav__item"><a class="nav__link" href="./NewsPage.html">News</a></li>
+          <li class="nav__item"><a class="nav__link" href="./ContactsPage.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <div class="header-contacts">
+        <a href="tel:4055550128" class="header-contacts__link link-call">
+          <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
+          <span class="link-call__title">Call us</span>
+          <span class="link-call__tel">(405) 555-0128</span>
+        </a>
+        <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
+          <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
+          <span class="link-mail__title">Talk to us</span>
+          <span class="link-mail__adr">hello@createx.com</span>
+        </a>
       </div>
-    </header>
-    <main>
-      <section class="hero">
-        <div class="slider__btn" id="slide-to-left"><svg><path fill-rule="evenodd" clip-rule="evenodd" d="M9.207 17.207a1 1 0 01-1.414 0l-4.5-4.5a1 1 0 010-1.414l4.5-4.5a1 1 0 011.414 1.414L6.414 11H20a1 1 0 110 2H6.414l2.793 2.793a1 1 0 010 1.414z"></path></svg></div>
-        <div class="slider__btn" id="slide-to-right"><svg><path fill-rule="evenodd" clip-rule="evenodd" d="M14.793 6.793a1 1 0 011.414 0l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414L17.586 13H4a1 1 0 110-2h13.586l-2.793-2.793a1 1 0 010-1.414z"></path></svg></div>
-        <div class="hero__slider">
-          <div class="slider__slide" id="hero-slide-1">
-            <div class="container">
-              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
-              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
-              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
-              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
-            <div class="slider__slide" id="hero-slide-2">
-            <div class="container">
-              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
-              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
-              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
-              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
-            <div class="slider__slide" id="hero-slide-3">
-            <div class="container">
-              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
-              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
-              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
-              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
-            </div>
-            <div class="slider__slide" id="hero-slide-4">
-            <div class="container">
-              <h2 class="slider__title">CREATE<span>X</span>CONSTRUCTION</h2>
-              <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+    </div>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="slider__btn" id="slide-to-left">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+            fill="#1E212C" />
+        </svg>
+      </div>
+      <div class="slider__btn" id="slide-to-right">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+            fill="#1E212C" />
+        </svg>
+      </div>
+      <div class="hero__slider">
+        <div class="slider__slide" id="hero-slide-1">
+          <div class="container">
+            <h2 class="slider__title">CREATE<span>X</span><br />CONSTRUCTION</h2>
+            <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim
+              vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+            <div class="hero-btns">
               <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
               <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
             </div>
           </div>
         </div>
-        <div class="hero__slider-count">
-          <div class="slider-count__1 active">01</div>
-          <div class="slider-count__2">02</div>
-          <div class="slider-count__3">03</div>
-          <div class="slider-count__4">04</div>
-      </section>
-    </main>
-  </body>
+        <div class="slider__slide" id="hero-slide-2">
+          <div class="container">
+            <h2 class="slider__title">CREATE<span>X</span><br />CONSTRUCTION</h2>
+            <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim
+              vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis. </p>
+            <div class="hero-btns">
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+          </div>
+        </div>
+        <div class="slider__slide" id="hero-slide-3">
+          <div class="container">
+            <h2 class="slider__title">CREATE<span>X</span><br />CONSTRUCTION</h2>
+            <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim
+              vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.
+            </p>
+            <div class="hero-btns">
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+          </div>
+        </div>
+        <div class="slider__slide" id="hero-slide-4">
+          <div class="container">
+            <h2 class="slider__title">CREATE<span>X</span><br />CONSTRUCTION</h2>
+            <p class="slider__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat,
+              dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum
+              elementum felis. </p>
+            <div class="hero-btns">
+              <a href="./about.html" class="btn l-btn white-outline">Learn more about us</a>
+              <a href="#" class="btn l-btn">SUBMIT REQUEST</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="hero__slider-count container">
+        <div class="slider-count-item slider-count__1 active">01</div>
+        <div class="slider-count-item slider-count__2">02</div>
+        <div class="slider-count-item slider-count__3">03</div>
+        <div class="slider-count-item slider-count__4">04</div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
