add video section html

--- a/pages/index.html
+++ b/pages/index.html
@@ -107,8 +107,19 @@
         <div class="slider-count-item slider-count__4">04</div>
       </div>
     </section>
+    <section class="video">
+      <div class="video__container container">
+        <h2 class="video__title">We are Createx Construction Bureau</h2>
+        <p class="video__subtitle">We are rightfully considered to be the best construction company in the USA.</p>
+        <div class="video-block">
+          <button class="btn l-btn video-block__play" id="video-block__play"><img
+              src="../assets/icons/files/Play-video.svg" alt="play video"></button>
+          <video src="../assets/videos/about-video.mp4" muted loop controls></video>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
-<script src="../scripts/index.js" ></script>
+<script src="../scripts/index.js"></script>
 
 </html>
