add video section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -114,7 +114,7 @@
         <div class="video-block">
           <button class="btn l-btn video-block__play" id="video-block__play"><img
               src="../assets/icons/files/Play-video.svg" alt="play video"></button>
-          <video src="../assets/videos/about-video.mp4" muted loop controls></video>
+          <video src="../assets/videos/about-video.mp4" muted loop></video>
         </div>
       </div>
     </section>
