--- a/pages/index.html
+++ b/pages/index.html
@@ -111,10 +111,10 @@
       <div class="video__container container">
         <h2 class="video__title">We are Createx Construction Bureau</h2>
         <p class="video__subtitle">We are rightfully considered to be the best construction company in the USA.</p>
-        <div class="video-block">
+        <div class="video-block" id="video-block">
           <button class="btn l-btn video-block__play" id="video-block__play"><img
               src="../assets/icons/files/Play-video.svg" alt="play video"></button>
-          <video src="../assets/videos/about-video.mp4" muted loop></video>
+          <video id="video-player" src="../assets/videos/about-video.mp4" muted loop></video>
         </div>
       </div>
     </section>
