--- a/pages/index.html
+++ b/pages/index.html
@@ -118,6 +118,27 @@
         </div>
       </div>
     </section>
+    <section class="values">
+      <div class="values-container container">
+        <h2 class="values-container__title">Our core values</h2>
+        <p class="values-container__subtitle">Our mission is to set the highest standards for construction sphere.</p>
+        <ul class="values-list">
+          <li class="values-list__item">
+            <img src="" alt="Quality">
+            <h3 class="item__title">Quality</h3>
+            <p class="item__text">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.</p>
+          </li><li class="values-list__item">
+            <img src="" alt="Safety">
+            <h3 class="item__title">Safety</h3>
+            <p class="item__text">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim empor est ea.</p>
+          </li><li class="values-list__item">
+            <img src="" alt="Comfort">
+            <h3 class="item__title">Comfort</h3>
+            <p class="item__text">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 <script src="../scripts/index.js"></script>
