add values section

--- a/pages/index.html
+++ b/pages/index.html
@@ -109,8 +109,8 @@
     </section>
     <section class="video">
       <div class="video__container container">
-        <h2 class="video__title">We are Createx Construction Bureau</h2>
-        <p class="video__subtitle">We are rightfully considered to be the best construction company in the USA.</p>
+        <h2 class="video__title title">We are Createx Construction Bureau</h2>
+        <p class="video__subtitle subtitle">We are rightfully considered to be the best construction company in the USA.</p>
         <div class="video-block" id="video-block">
           <button class="btn l-btn video-block__play" id="video-block__play"><img
               src="../assets/icons/files/Play-video.svg" alt="play video"></button>
@@ -120,21 +120,21 @@
     </section>
     <section class="values">
       <div class="values-container container">
-        <h2 class="values-container__title">Our core values</h2>
-        <p class="values-container__subtitle">Our mission is to set the highest standards for construction sphere.</p>
+        <h2 class="values-container__title title">Our core values</h2>
+        <p class="values-container__subtitle subtitle">Our mission is to set the highest standards for construction sphere.</p>
         <ul class="values-list">
           <li class="values-list__item">
-            <img src="" alt="Quality">
-            <h3 class="item__title">Quality</h3>
-            <p class="item__text">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.</p>
+            <img src="../assets/icons/additional icons/ic-like.svg" alt="Quality">
+            <h3 class="item__title title">Quality</h3>
+            <p class="item__text subtitle">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.</p>
           </li><li class="values-list__item">
-            <img src="" alt="Safety">
-            <h3 class="item__title">Safety</h3>
-            <p class="item__text">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim empor est ea.</p>
+            <img src="../assets/icons/additional icons/ic-hand.svg" alt="Safety">
+            <h3 class="item__title title">Safety</h3>
+            <p class="item__text subtitle">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim empor est ea.</p>
           </li><li class="values-list__item">
-            <img src="" alt="Comfort">
-            <h3 class="item__title">Comfort</h3>
-            <p class="item__text">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.</p>
+            <img src="../assets/icons/additional icons/ic-slippers.svg" alt="Comfort">
+            <h3 class="item__title title">Comfort</h3>
+            <p class="item__text subtitle">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.</p>
           </li>
         </ul>
       </div>
