add request form section

--- a/pages/index.html
+++ b/pages/index.html
@@ -110,7 +110,8 @@
     <section class="video">
       <div class="video__container container">
         <h2 class="video__title title">We are Createx Construction Bureau</h2>
-        <p class="video__subtitle subtitle">We are rightfully considered to be the best construction company in the USA.</p>
+        <p class="video__subtitle subtitle">We are rightfully considered to be the best construction company in the USA.
+        </p>
         <div class="video-block" id="video-block">
           <button class="btn l-btn video-block__play" id="video-block__play"><img
               src="../assets/icons/files/Play-video.svg" alt="play video"></button>
@@ -121,22 +122,50 @@
     <section class="values">
       <div class="values-container container">
         <h2 class="values-container__title title">Our core values</h2>
-        <p class="values-container__subtitle subtitle">Our mission is to set the highest standards for construction sphere.</p>
+        <p class="values-container__subtitle subtitle">Our mission is to set the highest standards for construction
+          sphere.</p>
         <ul class="values-list">
           <li class="values-list__item">
             <img src="../assets/icons/additional icons/ic-like.svg" alt="Quality">
             <h3 class="item__title title">Quality</h3>
-            <p class="item__text subtitle">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.</p>
-          </li><li class="values-list__item">
+            <p class="item__text subtitle">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit
+              nostrud aliquip sunt.</p>
+          </li>
+          <li class="values-list__item">
             <img src="../assets/icons/additional icons/ic-hand.svg" alt="Safety">
             <h3 class="item__title title">Safety</h3>
-            <p class="item__text subtitle">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim empor est ea.</p>
-          </li><li class="values-list__item">
+            <p class="item__text subtitle">Anim reprehenderit sint voluptate exercitation adipisicing laborum
+              adipisicing. Minim empor est ea.</p>
+          </li>
+          <li class="values-list__item">
             <img src="../assets/icons/additional icons/ic-slippers.svg" alt="Comfort">
             <h3 class="item__title title">Comfort</h3>
-            <p class="item__text subtitle">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.</p>
+            <p class="item__text subtitle">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate
+              ullamco proident ea ad.</p>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="request-form">
+      <div class="request-form__container container">
+        <h2 class="title request-form__title">Want to know more? Ask us a question:</h2>
+        <form action="" class="form">
+          <ul class="form__inputs">
+            <li class="form__input">
+              <label for="name">Name</label>
+              <input type="text" name="name" id="name-input">
+            </li>
+            <li class="form__input">
+              <label for="phone">Phone</label>
+              <input type="text" name="phone" id="phone-input">
+            </li>
+            <li class="form__input">
+              <label for="message">Message</label>
+              <input type="text" name="message" id="message-input">
+            </li>
+          </ul>
+          <button class="btn l-btn">Send</button>
+        </form>
       </div>
     </section>
   </main>
