add request form section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -151,20 +151,20 @@
         <h2 class="title request-form__title">Want to know more? Ask us a question:</h2>
         <form action="" class="form">
           <ul class="form__inputs">
-            <li class="form__input">
+            <li class="form__input input-block">
               <label for="name">Name</label>
-              <input type="text" name="name" id="name-input">
+              <input type="text" name="name" id="name-input" placeholder="Your name">
             </li>
-            <li class="form__input">
+            <li class="form__input input-block">
               <label for="phone">Phone</label>
-              <input type="text" name="phone" id="phone-input">
+              <input type="text" name="phone" id="phone-input" placeholder="Your phone">
             </li>
-            <li class="form__input">
+            <li class="form__input input-block">
               <label for="message">Message</label>
-              <input type="text" name="message" id="message-input">
+              <input type="text" name="message" id="message-input" placeholder="Your message">
             </li>
           </ul>
-          <button class="btn l-btn">Send</button>
+          <button class="btn m-btn form__btn">Send</button>
         </form>
       </div>
     </section>
