add services section html

--- a/pages/index.html
+++ b/pages/index.html
@@ -168,6 +168,51 @@
         </form>
       </div>
     </section>
+    <section class="services">
+      <div class="services-container container">
+        <h2 class="services__title title">Our services</h2>
+        <p class="services__subtitle subtitle">Createx Construction Bureau is a construction giant with a full range of
+          construction services.</p>
+        <ul class="services__list">
+          <li class="services__item">
+            <a href="./interior-design.html">
+              <img src="../assets/icons/additional icons/ic-construction.svg" alt="Construction">
+              <h3 class="item-title title">Construction</h3>
+              <div class="item__background">
+                <img src="../assets/services/constructions.jpg" alt="background">
+              </div>
+            </a>
+          </li>
+          <li class="services__item">
+            <a href="./interior-design.html">
+              <img src="../assets/icons/additional icons/ic-plan.svg" alt="Project Development">
+              <h3 class="item-title title">Project Development</h3>
+              <div class="item__background">
+                <img src="../assets/services/project-development.jpg" alt="background">
+              </div>
+            </a>
+          </li>
+          <li class="services__item">
+            <a href="./interior-design.html">
+              <img src="../assets/icons/additional icons/ic-pantone.svg" alt="Interior Design">
+              <h3 class="item-title title">Interior Design</h3>
+              <div class="item__background">
+                <img src="../assets/services/interior-design.jpg" alt="background">
+              </div>
+            </a>
+          </li>
+          <li class="services__item">
+            <a href="./interior-design.html">
+              <img src="../assets/icons/additional icons/ic-painting.svg" alt="Repairs">
+              <h3 class="item-title title">Repairs</h3>
+              <div class="item__background">
+                <img src="../assets/services/repairs.jpg" alt="background">
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 <script src="../scripts/index.js"></script>
