add learn more to services section

--- a/pages/index.html
+++ b/pages/index.html
@@ -211,6 +211,10 @@
             </a>
           </li>
         </ul>
+        <div class="services__learn-more">
+          <h3 class="learn-more__title title">Learn more about our services</h3>
+          <a href="./services.html" class="btn l-btn">View services</a>
+        </div>
       </div>
     </section>
   </main>
