--- a/pages/index.html
+++ b/pages/index.html
@@ -257,40 +257,69 @@
       <div class="portfolio-container container">
         <h2 class="portfolio__title title">Browse our selected projects
           and learn more about our work</h2>
-        <div class="slider__btn disabled" id="slide-portfolio-to-left">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
-              fill="#1E212C" />
-          </svg>
-        </div>
-        <div class="slider__btn" id="slide-portfolio-to-right">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
-              fill="#1E212C" />
-          </svg>
+        <div class="slider-btns">
+          <div class="slider__btn disabled" id="slide-portfolio-to-left">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+                fill="#1E212C" />
+            </svg>
+          </div>
+          <div class="slider__btn" id="slide-portfolio-to-right">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+                fill="#1E212C" />
+            </svg>
+          </div>
         </div>
         <div class="portfolio__slider" id="portfolio__slider">
           <div class="slider__slide" id="portfolio-slide-1">
+            <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
             <div class="content">
               <h3 class="slide-title title">Red Finger Building</h3>
               <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="" class="btn m-btn outline">View Project</a>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
             </div>
           </div>
-          <div class="slider__slide" id="portfolio-slide-1">
+          <div class="slider__slide" id="portfolio-slide-2">
+            <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
             <div class="content">
               <h3 class="slide-title title">Cubes Building</h3>
               <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="" class="btn m-btn outline">View Project</a>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
             </div>
           </div>
-          <div class="slider__slide" id="portfolio-slide-1">
+          <div class="slider__slide" id="portfolio-slide-3">
+            <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
             <div class="content">
               <h3 class="slide-title title">The Pencil Building</h3>
               <p class="slide-subtitle subtitle">Stores & Malls</p>
-              <a href="" class="btn m-btn outline">View Project</a>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+            </div>
+          </div>
+          <div class="slider__slide" id="portfolio-slide-4">
+            <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
+            <div class="content">
+              <h3 class="slide-title title">Red Finger Building</h3>
+              <p class="slide-subtitle subtitle">Business Centers</p>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+            </div>
+          </div>
+          <div class="slider__slide" id="portfolio-slide-5">
+            <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
+            <div class="content">
+              <h3 class="slide-title title">Cubes Building</h3>
+              <p class="slide-subtitle subtitle">Business Centers</p>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+            </div>
+          </div>
+          <div class="slider__slide" id="portfolio-slide-6">
+            <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
+            <div class="content">
+              <h3 class="slide-title title">The Pencil Building</h3>
+              <p class="slide-subtitle subtitle">Stores & Malls</p>
+              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
             </div>
           </div>
         </div>
