--- a/pages/index.html
+++ b/pages/index.html
@@ -331,6 +331,19 @@
         </div>
       </div>
     </section>
+    <section class="clients">
+      <div class="clients-container container">
+        <h2 class="clients-title title">Supported by 12+ partners</h2>
+        <ul class="clients-list">
+          <li class="client-item"><img src="../assets/partners/InDepth Consulting.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Higher Fit.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Sentinal Consulting.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Happy Home.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/For Sale.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Sunset Realty.png" alt="logo"></li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 <script src="../scripts/index.js"></script>
