--- a/pages/index.html
+++ b/pages/index.html
@@ -347,9 +347,37 @@
     <section class="testimonials">
       <div class="testimonials-container container">
         <h2 class="testimonials-title title">What our clients are saying</h2>
-        <img src="../assets/testimonials/image.jpg" alt="testimonials">
+        <img class="testimonials-img" src="../assets/testimonials/image.jpg" alt="testimonials">
         <div class="testimonials-slider">
           <ul class="testimonials-slides" id="testimonials-slides">
+            <li class="slider__slide" id="portfolio-slide-1">
+              <img src="../assets/testimonials/profile-image.png" alt="profile">
+              <div class="review-content">
+                <p class="review__text">
+                  Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim.
+                  Consectetur magna cillum consequat minim
+                  laboris cillum laboris voluptate minim proident exercitation ullamco.
+                </p>
+                <div class="review__author">
+                  <p class="author__name">Shawn Edwards
+                  <p class="author__position">Position, Company name</p>
+                </div>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-1">
+              <img src="../assets/testimonials/profile-image.png" alt="profile">
+              <div class="review-content">
+                <p class="review__text">
+                  Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim.
+                  Consectetur magna cillum consequat minim
+                  laboris cillum laboris voluptate minim proident exercitation ullamco.
+                </p>
+                <div class="review__author">
+                  <p class="author__name">Shawn Edwards
+                  <p class="author__position">Position, Company name</p>
+                </div>
+              </div>
+            </li>
             <li class="slider__slide" id="portfolio-slide-1">
               <img src="../assets/testimonials/profile-image.png" alt="profile">
               <div class="review-content">
