add figures section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -413,6 +413,7 @@
       </div>
     </section>
     <section class="figures">
+      <img src="../assets/background/figures-bg.png" alt="background" class="figures-bg">
       <div class="container-figures container">
         <h2 class="figures-title title">Some facts and figures</h2>
         <ul class="figures__list">
